--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "code-evaluation",
-  "version": "1.0.0-SNAPSHOT",
+  "version": "1.0.0",
   "description": "code evaluation",
   "main": "src/index.js",
   "scripts": {
